--- a/package.json
+++ b/package.json
@@ -29,32 +29,32 @@
     "@babel/preset-typescript": "^7.27.1",
     "@babel/types": "^7.27.6",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "@jest/globals": "30.0.0-beta.6",
+    "@jest/globals": "30.0.2",
     "@nkzw/eslint-config": "^3.0.1",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__traverse": "^7.20.7",
     "@types/invariant": "^2.2.37",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/json-diff": "^1.0.3",
-    "@types/node": "^22.15.30",
+    "@types/node": "^24.0.3",
     "@types/prettier-2": "npm:@types/prettier@^2.0.0",
-    "@types/react": "^19.1.7",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/yargs": "^17.0.33",
-    "eslint": "^9.28.0",
+    "eslint": "^9.29.0",
     "eslint-plugin-workspaces": "^0.11.0",
     "invariant": "^2.2.4",
-    "jest": "^30.0.0",
-    "jest-environment-jsdom": "^30.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
     "npm-run-all2": "^8.0.4",
     "nullthrows": "^1.1.1",
     "prettier": "4.0.0-alpha.12",
     "prettier-2": "npm:prettier@^2.8.8",
     "prettier-plugin-packagejson": "^2.5.15",
     "react-dom": "^19.1.0",
-    "tsdown": "^0.12.7",
+    "tsdown": "^0.12.8",
     "typescript": "^5.8.3"
   },
   "pnpm": {
