--- a/example/package.json
+++ b/example/package.json
@@ -7,9 +7,9 @@
   "main": "index.js",
   "scripts": {
     "build:fbtee": "pnpm fbtee:manifest && pnpm fbtee:collect && pnpm fbtee:translate && pnpm fbtee:translate-multiple && pnpm fbtee:translate-single",
-    "clean": "rm -rf .enum_manifest.json .src_manifest.json .source_strings.json src/translatedFbts.json src/translatedFbts .test_*.json 2&> /dev/null || exit 0",
+    "clean": "rm -rf .enum_manifest.json .src_manifest.json source_strings.json src/translatedFbts.json src/translatedFbts .test_*.json 2&> /dev/null || exit 0",
     "dev": "vite",
-    "fbtee:collect": "fbtee collect --fbt-common-path ./common_strings.json --pretty --manifest < .src_manifest.json > .source_strings.json",
+    "fbtee:collect": "fbtee collect --fbt-common-path ./common_strings.json --pretty --manifest < .src_manifest.json > source_strings.json",
     "fbtee:manifest": "fbtee manifest --src src",
     "fbtee:translate": "fbtee translate --translations translations/*.json --jenkins > src/translatedFbts.json",
     "fbtee:translate-multiple": "fbtee translate --translations translations/*.json --jenkins --output-dir src/translatedFbts",
