--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
       ]
     },
     "overrides": {
-      "react-is@^*": "19.0.0"
+      "react@^19": "^19.1.0",
+      "react-dom@^19": "^19.1.0",
+      "react-is": "^19.1.0"
     }
   }
 }
