--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "clean": "rm -rf packages/*/lib packages/fbtee/lib-tmp; cd example pnpm clean",
     "copy-files": "find packages/* -type d -maxdepth 0 -exec cp README.md LICENSE {} \\;",
     "dev": "cd example && pnpm build:fbtee && pnpm dev",
-    "format": "prettier --write .",
+    "format": "prettier --experimental-cli --write .",
     "jest": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules --no-warnings\" node_modules/.bin/jest",
     "lint": "eslint --cache .",
-    "lint:format": "prettier --cache --check .",
+    "lint:format": "prettier --experimental-cli --cache --check .",
     "ship": "pnpm clean && pnpm build:all && pnpm test && pnpm publish -r --access public",
     "test": "npm-run-all --parallel lint jest tsc:check lint:format",
     "tsc:check": "tsc"
@@ -31,6 +31,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@jest/globals": "30.0.2",
     "@nkzw/eslint-config": "^3.0.1",
+    "@prettier/plugin-oxc": "^0.0.3",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
@@ -50,7 +51,7 @@
     "jest-environment-jsdom": "^30.0.2",
     "npm-run-all2": "^8.0.4",
     "nullthrows": "^1.1.1",
-    "prettier": "4.0.0-alpha.12",
+    "prettier": "^3.6.0",
     "prettier-2": "npm:prettier@^2.8.8",
     "prettier-plugin-packagejson": "^2.5.15",
     "react-dom": "^19.1.0",
