--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "copy-files": "find packages/* -type d -maxdepth 0 -exec cp README.md LICENSE {} \\;",
     "dev": "cd example && pnpm build:fbtee && pnpm dev",
     "format": "prettier --experimental-cli --write .",
+    "preinstall": "command -v git >/dev/null 2>&1 && git config core.hooksPath git-hooks || exit 0",
     "jest": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules --no-warnings\" node_modules/.bin/jest",
     "lint": "eslint --cache .",
     "lint:format": "prettier --experimental-cli --cache --check .",
@@ -19,19 +20,19 @@
     "tsc:check": "tsc"
   },
   "devDependencies": {
-    "@babel/cli": "^7.27.2",
-    "@babel/core": "^7.27.4",
-    "@babel/generator": "^7.27.5",
-    "@babel/parser": "^7.27.5",
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/generator": "^7.28.0",
+    "@babel/parser": "^7.28.0",
     "@babel/plugin-syntax-import-attributes": "^7.27.1",
     "@babel/plugin-syntax-typescript": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@babel/types": "^7.27.6",
+    "@babel/types": "^7.28.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
-    "@jest/globals": "30.0.2",
+    "@jest/globals": "30.0.4",
     "@nkzw/eslint-config": "^3.0.1",
-    "@prettier/plugin-oxc": "^0.0.3",
+    "@prettier/plugin-oxc": "^0.0.4",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.27.0",
@@ -39,23 +40,23 @@
     "@types/invariant": "^2.2.37",
     "@types/jest": "^30.0.0",
     "@types/json-diff": "^1.0.3",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.10",
     "@types/prettier-2": "npm:@types/prettier@^2.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/yargs": "^17.0.33",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.1",
     "eslint-plugin-workspaces": "^0.11.0",
     "invariant": "^2.2.4",
-    "jest": "^30.0.2",
-    "jest-environment-jsdom": "^30.0.2",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "npm-run-all2": "^8.0.4",
     "nullthrows": "^1.1.1",
-    "prettier": "^3.6.0",
+    "prettier": "^3.6.2",
     "prettier-2": "npm:prettier@^2.8.8",
-    "prettier-plugin-packagejson": "^2.5.15",
+    "prettier-plugin-packagejson": "^2.5.17",
     "react-dom": "^19.1.0",
-    "tsdown": "^0.12.8",
+    "tsdown": "^0.12.9",
     "typescript": "^5.8.3"
   },
   "pnpm": {
