--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ packages/fbtee/.enum_manifest.json
 packages/fbtee/lib-tmp
 packages/fbtee/Strings.json
 tsconfig.tsbuildinfo
+websie/.enum_manifest.json
+website/dist/
+website/source_strings.json
+website/src/translations
+website/vite.config.ts.timestamp-*
