--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "react-dom": "^19.1.0",
     "tsdown": "^0.12.9",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "pnpm": ">=10.0.0"
   }
 }
