--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lint:format": "prettier --experimental-cli --cache --check .",
     "ship": "pnpm clean && pnpm build:all && pnpm test && pnpm publish -r --access public",
     "test": "npm-run-all --parallel lint jest tsc:check lint:format",
-    "test:pristine": "pnpm install && pnpm clean && pnpm build:all && pnpm test",
     "tsc:check": "tsc"
   },
   "devDependencies": {
@@ -62,6 +61,7 @@
     "typescript": "^5.8.3"
   },
   "engines": {
+    "node": ">=24.0.0",
     "pnpm": ">=10.0.0"
   }
 }
