--- a/package.json
+++ b/package.json
@@ -59,5 +59,9 @@
     "react-dom": "^19.1.0",
     "tsdown": "^0.12.9",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=24.0.0",
+    "pnpm": ">=10.0.0"
   }
 }
