Improve ESLint docs, small improvements to `no-untranslated-strings`.

--- a/packages/babel-plugin-fbtee-auto-import/package.json
+++ b/packages/babel-plugin-fbtee-auto-import/package.json
@@ -26,6 +26,6 @@
   "dependencies": {
     "@babel/core": "^7.28.0",
     "@babel/types": "^7.28.1",
-    "@nkzw/babel-plugin-fbtee": "workspace:^"
+    "@nkzw/babel-plugin-fbtee": "workspace:*"
   }
 }
