--- a/example/package.json
+++ b/example/package.json
@@ -14,10 +14,10 @@
     "fbtee:translate-multiple": "fbtee translate -o src/translatedFbts"
   },
   "dependencies": {
-    "@nkzw/babel-preset-fbtee": "workspace:^",
+    "@nkzw/babel-preset-fbtee": "workspace:*",
     "@nkzw/stack": "^2.2.0",
     "classnames": "^2.5.1",
-    "fbtee": "workspace:^",
+    "fbtee": "workspace:*",
     "invariant": "^2.2.4",
     "normalize.css": "8.0.1",
     "react": "^19.1.0",
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.27.1",
-    "@nkzw/eslint-plugin-fbtee": "workspace:^",
+    "@nkzw/eslint-plugin-fbtee": "workspace:*",
     "@vitejs/plugin-react": "^4.7.0",
     "invariant": "^2.2.4",
     "vite": "^7.0.5"
