--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.5.1",
     "@jest/globals": "30.0.4",
     "@nkzw/eslint-config": "^3.0.1",
+    "@nkzw/eslint-plugin-fbtee": "workspace:*",
     "@prettier/plugin-oxc": "^0.0.4",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
