--- a/packages/babel-plugin-fbtee/package.json
+++ b/packages/babel-plugin-fbtee/package.json
@@ -33,7 +33,7 @@
     "@babel/preset-typescript": "^7.27.1",
     "@babel/traverse": "^7.28.0",
     "@babel/types": "^7.28.1",
-    "@nkzw/babel-plugin-fbtee-auto-import": "workspace:^",
+    "@nkzw/babel-plugin-fbtee-auto-import": "workspace:*",
     "invariant": "^2.2.4",
     "jest-docblock": "30.0.1",
     "nullthrows": "^1.1.1",
