--- a/packages/babel-preset-fbtee/package.json
+++ b/packages/babel-preset-fbtee/package.json
@@ -27,8 +27,8 @@
     "build": "tsdown src/index.tsx src/bin.tsx -d lib --target=node22 --format=esm --clean --dts"
   },
   "dependencies": {
-    "@nkzw/babel-plugin-fbtee": "workspace:^",
-    "@nkzw/babel-plugin-fbtee-auto-import": "workspace:^",
-    "@nkzw/babel-plugin-fbtee-runtime": "workspace:^"
+    "@nkzw/babel-plugin-fbtee": "workspace:*",
+    "@nkzw/babel-plugin-fbtee-auto-import": "workspace:*",
+    "@nkzw/babel-plugin-fbtee-runtime": "workspace:*"
   }
 }
