--- a/website/package.json
+++ b/website/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fbtee": "workspace:^",
+    "fbtee": "workspace:*",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -33,7 +33,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@nkzw/babel-preset-fbtee": "workspace:^",
+    "@nkzw/babel-preset-fbtee": "workspace:*",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
