Do not require React in server builds, fixes #48.

--- a/packages/fbtee/package.json
+++ b/packages/fbtee/package.json
@@ -31,6 +31,11 @@
     },
     "./ReactTypes.d.ts": {
       "types": "./ReactTypes.d.ts"
+    },
+    "./server": {
+      "types": "./lib/index-server.d.ts",
+      "import": "./lib/index-server.js",
+      "default": "./lib/index-server.js"
     }
   },
   "main": "lib/index.js",
