--- a/packages/babel-plugin-fbtee/package.json
+++ b/packages/babel-plugin-fbtee/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@babel/core": "^7.28.4",
     "@babel/generator": "^7.28.3",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
     "@babel/traverse": "^7.28.4",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.27.1",
     "@types/babel__core": "^7.20.5",
+    "@types/babel__preset-env": "^7.10.0",
     "@types/babel__traverse": "^7.28.0"
   }
 }
