Redo website translations one time.

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,9 +2,11 @@ example/.enum_manifest.json
 example/source_strings.json
 example/src/translatedFbts
 example/src/translatedFbts.json
+example/translations/
 packages/*/lib/
 packages/fbtee/lib-tmp/
 pnpm-lock.yaml
 website/.enum_manifest.json
 website/dist/
 website/source_strings.json
+website/translations/
