--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@jest/globals": "30.2.0",
     "@nkzw/eslint-config": "^3.1.3",
     "@nkzw/eslint-plugin-fbtee": "workspace:*",
+    "@pnpm/find-workspace-packages": "^6.0.9",
     "@prettier/plugin-oxc": "^0.0.4",
     "@testing-library/react": "^16.3.0",
     "@types/babel__core": "^7.20.5",
