--- a/packages/babel-plugin-fbtee/package.json
+++ b/packages/babel-plugin-fbtee/package.json
@@ -19,21 +19,21 @@
   },
   "license": "MIT",
   "type": "module",
-  "main": "lib/index.js",
+  "main": "lib/index.mjs",
   "bin": {
-    "fbtee": "lib/bin.js"
+    "fbtee": "lib/bin.mjs"
   },
   "scripts": {
     "build": "tsdown src/index.tsx src/bin.tsx -d lib --target=node22 --format=esm --clean --dts"
   },
   "dependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/generator": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/generator": "^7.28.5",
     "@babel/plugin-syntax-decorators": "^7.27.1",
-    "@babel/preset-react": "^7.27.1",
-    "@babel/preset-typescript": "^7.27.1",
-    "@babel/traverse": "^7.28.4",
-    "@babel/types": "^7.28.4",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
     "@nkzw/babel-plugin-fbtee-auto-import": "workspace:*",
     "invariant": "^2.2.4",
     "jest-docblock": "30.2.0",
