--- a/packages/eslint-plugin-fbtee/package.json
+++ b/packages/eslint-plugin-fbtee/package.json
@@ -11,17 +11,16 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    "import": "./lib/index.js",
-    "require": "./lib/index.cjs"
+    "import": "./lib/index.mjs"
   },
-  "main": "lib/index.cjs",
+  "main": "lib/index.mjs",
   "scripts": {
-    "build": "tsdown src/index.tsx -d lib --target=node22 --format=esm,cjs --clean --dts"
+    "build": "tsdown src/index.tsx -d lib --target=node22 --format=esm --clean --dts"
   },
   "dependencies": {
-    "@typescript-eslint/utils": "^8.46.0"
+    "@typescript-eslint/utils": "^8.46.3"
   },
   "devDependencies": {
-    "@typescript-eslint/rule-tester": "^8.46.0"
+    "@typescript-eslint/rule-tester": "^8.46.3"
   }
 }
