--- a/packages/babel-plugin-fbtee/package.json
+++ b/packages/babel-plugin-fbtee/package.json
@@ -35,6 +35,7 @@
     "@babel/traverse": "^7.28.5",
     "@babel/types": "^7.28.5",
     "@nkzw/babel-plugin-fbtee-auto-import": "workspace:*",
+    "@swc/core": "1.14.0",
     "invariant": "^2.2.4",
     "jest-docblock": "30.2.0",
     "nullthrows": "^1.1.1",
