--- a/packages/fbtee/package.json
+++ b/packages/fbtee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fbtee",
-  "version": "1.7.1",
+  "version": "1.7.2",
   "description": "The JavaScript & React Internationalization Framework.",
   "keywords": [
     "fbt",
@@ -52,7 +52,7 @@
     "invariant": "^2.2.4"
   },
   "peerDependencies": {
-    "@nkzw/babel-plugin-fbtee": "workspace:*",
+    "@nkzw/babel-plugin-fbtee": "workspace:^",
     "react": "^19.0.0"
   }
 }
